--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.0.0-dev"
 edition = "2021"
 
 [dependencies]
+chrono = { version = "0.4.31", default_features = false }
 clap = { version = "4.4.8", features = ["derive"] }
-diesel = { version = "2.1.3", features = ["mysql"] }
+diesel = { version = "2.1.3", features = ["chrono", "mysql"] }
 dotenvy = "0.15.7"
 tabled = "0.14.0"
