Provide an API endpoint that shows the application version.

--- a/.env.dist
+++ b/.env.dist
@@ -1,1 +1,6 @@
+# Database credentials.
 DATABASE_URL=mysql://screentimeapi:screentimeapi@localhost/screentimeapi
+
+# Server connection.
+SERVER_PORT=3000
+SERVER_ADDRESS=0.0.0.0
