--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ chrono = { version = "0.4.31", default_features = false }
 clap = { version = "4.4.8", features = ["derive"] }
 diesel = { version = "2.1.3", features = ["chrono", "mysql"] }
 dotenvy = "0.15.7"
-serde = "1.0.192"
+serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tabled = "0.14.0"
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
