--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.6.20", features = ["headers"] }
-chrono = { version = "0.4.31", default_features = false }
+chrono = { version = "0.4.31", default_features = false, features = ['serde'] }
 clap = { version = "4.4.8", features = ["derive"] }
 diesel = { version = "2.1.3", features = ["chrono", "mysql"] }
 dotenvy = "0.15.7"
