--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,9 @@ serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tabled = "0.14.0"
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
+
+[lints.rust]
+unsafe_code = "forbid"
+
+[lints.clippy]
+pedantic = "deny"
