--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 axum = { version = "0.6.20", features = ["headers"] }
 chrono = { version = "0.4.31", default_features = false, features = ['serde'] }
 clap = { version = "4.4.8", features = ["derive"] }
-diesel = { version = "2.1.3", features = ["chrono", "mysql"] }
+diesel = { version = "2.1.3", features = ["chrono", "mysql", "r2d2"] }
 dotenvy = "0.15.7"
+r2d2 = "0.8.10"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tabled = "0.14.0"
