--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0-dev"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.6.20", features = ["headers"] }
+axum = { version = "0.6.20" }
 chrono = { version = "0.4.31", default_features = false, features = ['serde'] }
 clap = { version = "4.4.8", features = ["derive"] }
 diesel = { version = "2.1.3", features = ["chrono", "mysql", "r2d2"] }
