--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,15 +1,75 @@
-name: Validate
+name: Validate and test
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  build_and_test:
+    runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: mysql://screentimeapi:screentimeapi@127.0.0.1:3306/screentimeapi
+    services:
+      mariadb:
+        image: mariadb:10.5
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: screentimeapi
+          MYSQL_USER: screentimeapi
+          MYSQL_PASSWORD: screentimeapi
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check rustup version.
+        run: rustup --version
+      - name: Update Rust toolchain
+        run: rustup update
+      - name: Check Cargo version.
+        run: cargo --version
+      - name: Check Rust version.
+        run: rustc --version
+      - name: Fetch dependencies
+        run: cargo fetch
+      - name: Install Diesel CLI
+        run: cargo install diesel_cli --no-default-features --features mysql
+      - name: Compile
+        run: cargo build --verbose
+      - name: Setup .env file
+        run: cp .env.dist .env
+      - name: Setup database
+        run: diesel migration run
+      - name: Test
+        run: cargo test --verbose
+
+  code_style:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build
-        run: cargo build --verbose
-      - name: Run tests
-        run: cargo test --verbose
-      - name: Run Clippy
+      - name: Update Rust toolchain
+        run: rustup update
+      - name: Check Rustfmt version
+        run: cargo fmt --version
+      - name: Check formatting
+        run: cargo fmt --all -- --check
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Update Rust toolchain
+        run: rustup update
+      - name: Check Clippy version
+        run: cargo clippy --version
+      - name: Lint
         run: cargo clippy -- -D warnings
+
+  check_dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Update Rust toolchain
+        run: rustup update
+      - name: Check cargo-outdated version
+        run: cargo outdated --version
+      - name: Check for outdated dependencies
+        run: cargo outdated -R --exit-code 1
